examples/demostrador/demostrador-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: demostrador
  namespace: ai-iniciative-4-signal-process
spec:
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  selector:
      app: demostrador
